--- a/site-acessivel-aula-10/styles.css
+++ b/site-acessivel-aula-10/styles.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #FF862A;
-    --alto-contraste-fundo: #000000;
-    --alto-contraste-texto: #ffffff;
-    --alto-contraste-link: #ffd700;
+    --laranja-claro: #1bff73;
+    --alto-contraste-fundo: #09ff00;
+    --alto-contraste-texto: #0aff7098;
+    --alto-contraste-link: #00ff4c;
 }
 
 body {
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    background-color: #ffffff;
+    background-color: #00ff88;
 }
 
 
