--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ h2 {
 }
 
 .form-control {
-    background-color: #F1EDEF;
+    background-color: hsl(330, 80%, 53%);
 }
 .menu-acessibilidade{
     position: fixed;
