--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ section {
 /* posicionamento para a imagem à direita */
 .img-inicio {
     position: absolute;
-    right: 0;
+    right: var(--alto-contraste-texto);
     top: 18rem;
     width: 45rem;
     height: auto;
