--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ h2 {
 }
 
 #galeria {
-    background-color: #ff0000;
+    background-color: #00ff15;
 
 }
 
@@ -138,7 +138,7 @@ h2 {
 }
 
 .form-control {
-    background-color: hsl(330, 80%, 53%);
+    background-color: hsl(162, 100%, 50%);
 }
 .menu-acessibilidade{
     position: fixed;
