--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url('img/flor-bottom-direita.png') bottom right no-repeat;
+    background: url('img/Image_created_with_a_mobile_phone.png') bottom right no-repeat;
     background-size: 180px 180px;
 }
 
