--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('images.jpg;
+    background-image: url('img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg
+
+
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
