--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('images.jpg') top right no-repeat,
+    background: url('img/lossy-page1-640px-Os_Mutantes.tif\ \(1\).png,
         url('img bottom left no-repeat;
     background-size: 180px 180px;
     /* Ajuste o tamanho conforme necessário */
@@ -110,7 +110,8 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url('images.jpg;
+    background: url('img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg
+
     background-size: 180px 180px;
 }
 
