--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/limao_background.png') no-repeat bottom left;
+    background: url('img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa\,_1971.tif.jpg') no-repeat bottom left;
     background-size: 180px 180px;
 }
 
